[gd_scene load_steps=2 format=3 uid="uid://cwi7qexeqldtt"]

[ext_resource type="Script" path="res://%Project/%Scripts/UI/shop_ui.gd" id="1_tbhn0"]

[node name="Shop" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -312.0
offset_top = -201.0
offset_right = -312.0
offset_bottom = -201.0
mouse_filter = 2
script = ExtResource("1_tbhn0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_left = -5.0
offset_top = 22.0
offset_right = 619.0
offset_bottom = 386.0
scale = Vector2(1.01063, 0.973659)
color = Color(0, 0.470588, 0.317647, 0.87451)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_left = 238.465
offset_top = 23.6222
offset_right = 414.465
offset_bottom = 100.622
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 50
text = "Shop"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 71.0
offset_top = 60.0
offset_right = 171.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 25
text = "‚Üê back"
script = ExtResource("1_tbhn0")

[node name="AddUnitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 261.0
offset_right = 292.0
offset_bottom = 311.0
theme_override_font_sizes/font_size = 30
text = "Add unit"
script = ExtResource("1_tbhn0")

[node name="PolarizeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 174.0
offset_right = 264.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 30
text = "Polarize"
script = ExtResource("1_tbhn0")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="ready" from="BackButton" to="." method="_on_back_button_ready"]
[connection signal="pressed" from="AddUnitButton" to="." method="_on_add_unit_button_pressed"]
[connection signal="pressed" from="PolarizeButton" to="." method="_on_polarize_button_pressed"]
